--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
-<title>google map + gps sample : TAM Tips Note</title>
+<title>google map + gps sample : TAM TipsNote</title>
 <style type="text/css">
 #gmap {
 	width: 100%;
@@ -14,8 +14,8 @@
 <body>
 <div id="gmap"></div>
 
-<script src="//maps.google.com/maps/api/js?sensor=true"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
